--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -2,4 +2,4 @@ MOUSE_BTN3 add volume 2
 MOUSE_BTN4 add volume -2
 MOUSE_BTN7 seek -10
 MOUSE_BTN8 seek 10
-i show-text "Filename: ${filename}\n\nVideo Codec: ${video-format} ${width}x${height} ${video-aspect}\nInterlaced: ${video-frame-info/interlaced}\nbitrate: ${video-bitrate} fps: ${estimated-vf-fps}\nhwdec: ${hwdec-current}\n\nAudio: ${audio-codec}\nbitrate: ${audio-bitrate}\nsample rate: ${audio-params/samplerate}" 5000
+i show-text "Filename: ${filename}\n\nVideo Codec: ${video-format} ${width}x${height} ${video-params/aspect}\nInterlaced: ${video-frame-info/interlaced}\nbitrate: ${video-bitrate} fps: ${estimated-vf-fps}\nhwdec: ${hwdec-current}\n\nAudio: ${audio-codec}\nbitrate: ${audio-bitrate}\nsample rate: ${audio-params/samplerate}" 5000
