--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -5,6 +5,7 @@
 vo=gpu
 profile=gpu-hq
 hwdec=nvdec
+hwdec-codecs=all
 
 volume=60
 #geometry=1777x1000+0+0
@@ -16,3 +17,5 @@ osd-font-size=30
 osd-border-size=0
 osd-color="#FFFF99"
 osd-back-color="#CC33334D"
+
+load-unsafe-playlists=yes
