--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,21 +1,85 @@
-# basic configuration
-backend = "glx";
-vsync = "opengl-swc";
-#vsync = "none";
+### Shadow
+shadow = true;
+shadow-radius = 7;
+shadow-offset-x = 2;
+shadow-offset-y = 2;
+shadow-opacity = 0.75;
 
-glx-no-stencil = true;
-#shadow-exclude = true;
-#glx-copy-from-front = true;
-#glx-swap-method = 2;
-#xrender-sync = true;
-#xrender-sync-fence = true;
-paint-on-overlay = true
-#glx-use-copysubbuffermesa = true;
-
-# transparancy settings for i3
-#opacity-rule = [
-#    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-#];
-opacity-rule = [
-    "85:class_g = 'Gnome-terminal'"
+shadow-exclude = [
+  "! name~=''",
+  "class_g = 'Xfce4-notifyd'",
+  "class_g = 'Conky'",
+  "class_g = 'Wine'"
 ];
+
+#Window type settings
+wintypes:
+{
+  tooltip = { fade = true; shadow = false; };
+  menu = { shadow = false; };
+  dropdown_menu = { shadow = false; };
+  popup_menu =  { shadow = false; };
+  utility =  { shadow = false; };
+  dock =  { shadow = false; };
+};
+
+
+### Opacity
+#menu-opacity = 1;
+inactive-opacity = 0.7;
+active-opacity = 0.8;
+#frame-opacity = 0.8;  # i.e. titlebars, borders
+inactive-opacity-override = false;
+#alpha-step = 0.06;
+opacity-rule = [ 
+		"99:class_g *?= 'xscreensaver'", 
+		"99:class_g *?= 'steam_app_'", 
+		"99:class_g = 'mpv'", 
+		"99:class_g = 'vlc'", 
+		"99:class_g = 'smplayer'",
+		"99:class_g = 'Adl'",
+		"99:class_g = 'Wine'",
+		"99:class_g = 'Chromium'",
+		"99:class_g = 'firefox'",
+ 		"95:class_g *?= 'Rofi'"
+];
+
+#inactive-dim = 0.5;
+#inactive-dim-fixed = true;
+
+### Blur options
+blur-background = true;
+blur-background-frame = true;
+blur-method = "kawase";
+blur-strength = 15;
+blur-kern = "3x3box";
+# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+# blur-background-fixed = true;
+blur-background-exclude = [
+  "class_g = 'firefox'",
+  "class_g = 'Conky'",
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+
+### Fading
+fading = true;
+fade-delta = 3;  # 30;
+fade-in-step = 0.03;
+fade-out-step = 0.02;
+# no-fading-openclose = true;
+fade-exclude = [ ];
+
+
+### Other
+
+mark-wmwin-focused = false;
+mark-ovredir-focused = false;
+
+# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
+# Usually more reliable but depends on a EWMH-compliant WM.
+use-ewmh-active-win = true;
+
+backend = "glx";
