--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -54,6 +54,8 @@
 # Rarely installed browsers get higher priority; It is assumed that if you
 # install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
 # other hand are often only installed as fallback browsers.
+ext x?html?, has firefox,        X, flag f = firefox -- "$@"
+ext x?html?, has chromium,       X, flag f = chromium -- "$@"
 ext x?html?, has surf,           X, flag f = surf -- file://"$1"
 ext x?html?, has vimprobable,    X, flag f = vimprobable -- "$@"
 ext x?html?, has vimprobable2,   X, flag f = vimprobable2 -- "$@"
@@ -66,9 +68,7 @@ ext x?html?, has uzbl-tabbed,    X, flag f = uzbl-tabbed -- "$@"
 ext x?html?, has uzbl-browser,   X, flag f = uzbl-browser -- "$@"
 ext x?html?, has uzbl-core,      X, flag f = uzbl-core -- "$@"
 ext x?html?, has midori,         X, flag f = midori -- "$@"
-ext x?html?, has chromium,       X, flag f = chromium -- "$@"
 ext x?html?, has opera,          X, flag f = opera -- "$@"
-ext x?html?, has firefox,        X, flag f = firefox -- "$@"
 ext x?html?, has seamonkey,      X, flag f = seamonkey -- "$@"
 ext x?html?, has iceweasel,      X, flag f = iceweasel -- "$@"
 ext x?html?, has epiphany,       X, flag f = epiphany -- "$@"
@@ -139,7 +139,8 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has google-chrome-stable,     X, flag f = google-chrome-stable "$@"
+ext pdf, has chromium, X, flag f = firefox "$@"
+ext pdf, has chromium, X, flag f = chromium "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
@@ -170,6 +171,7 @@ ext djvu, has atril,  X, flag f = atril -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
+mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
