--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,1 +1,28 @@
-rofi.theme: ~/.config/rofi/themes/arthur.rasi
+rofi.modi:                           window,run,ssh
+rofi.width:                          50
+rofi.lines:                          15
+rofi.columns:                        1
+!rofi.font:                           roboto mono 10
+rofi.font:                           Hack Regular 13
+rofi.color-normal:                   #070C0D, #fafffe, #070C0D, #648793, #fafffe
+rofi.color-urgent:                   #070C0D, #d6b48d, #22231D, #d6b48d, #fafffe
+rofi.color-active:                   #070C0D, #88c2bf, #070C0D, #88c2bf, #070C0D
+rofi.color-window:                   #070C0D, #648793, #455d65
+rofi.bw:                             5
+rofi.location:                       0
+rofi.padding:                        5
+rofi.yoffset:                        0
+rofi.xoffset:                        0
+rofi.fixed-num-lines:                true
+rofi.terminal:                       rofi-sensible-terminal
+rofi.ssh-client:                     ssh
+rofi.ssh-command:                    {terminal} -e {ssh-client} {host}
+rofi.run-command:                    {cmd}
+rofi.parse-hosts:                    true
+rofi.matching:                       normal
+rofi.separator-style:                none
+rofi.scrollbar-width:                0
+rofi.kb-mode-next:                   Shift+Right,Control+Tab,Alt+l
+rofi.kb-mode-previous:               Shift+Left,Control+Shift+Tab,Alt+h
+rofi.kb-row-up:                      Up,Control+p,Shift+Tab,Shift+ISO_Left_Tab,Alt+k
+rofi.kb-row-down:                    Down,Control+n,Alt+j
