--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,5 +1,5 @@
 #map gf cd /run/user/1000/gvfs
-map gf cd /mnt/tower/downloads
+map gf cd /mnt/tower-staging
 map gF fzf_select
 map gG fzf_locate
 
