--- a/.conkyrc
+++ b/.conkyrc
@@ -66,18 +66,19 @@ ${font Ubuntu:style=Bold:size=8}${color2}SYSTEM ${stippled_hr}${color}${font}
 ${color0}${font ConkyColorsLogos:size=16}a${font}${color}${goto 32}${voffset -8}Kernel:  ${alignr}${color1}${kernel}${color}
 ${goto 32}Uptime: ${alignr}${color1}${uptime}${color}
 # |--CPU
-${voffset 12}${offset 2}${color0}${font Poky:size=14}P${font}${offset -19}${voffset 9}${offset 1}${cpubar cpu0 4,18}${color}${voffset -28}
-#${goto 32}CPU: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu0}%${color}${font} ${alignr}${color1}${cpugraph cpu0 12,60 {color3} {color2}}${color}
-${goto 32}CPU1: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu1}%${color}${font} ${alignr}${color1}${cpugraph cpu1 12,60 {color3} {color2}}${color}
-${goto 32}CPU2: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu2}%${color}${font} ${alignr}${color1}${cpugraph cpu2 12,60 {color3} {color2}}${color}
-${goto 32}CPU3: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu3}%${color}${font} ${alignr}${color1}${cpugraph cpu3 12,60 {color3} {color2}}${color}
-${goto 32}CPU4: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu4}%${color}${font} ${alignr}${color1}${cpugraph cpu4 12,60 {color3} {color2}}${color}
-${goto 32}CPU5: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu5}%${color}${font} ${alignr}${color1}${cpugraph cpu5 12,60 {color3} {color2}}${color}
-${goto 32}CPU6: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu6}%${color}${font} ${alignr}${color1}${cpugraph cpu6 12,60 {color3} {color2}}${color}
-${goto 32}CPU7: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu7}%${color}${font} ${alignr}${color1}${cpugraph cpu7 12,60 {color3} {color2}}${color}
-${goto 32}CPU8: ${font Ubuntu:style=Bold:size=8}${color1}${cpu cpu8}%${color}${font} ${alignr}${color1}${cpugraph cpu8 12,60 {color3} {color2}}${color}
-${goto 32}Temp: ${font Ubuntu:style=Bold:size=8}${color1}${execi 10 sensors |grep Package |cut -c17-23}${color}${font}
-${goto 32}Freq: ${font Ubuntu:style=Bold:size=8}${color1}${freq_g 1} Ghz${color}${font}
+${voffset 12}${offset 2}${color0}${font Poky:size=14}P${font}${offset -19}${voffset 9}${offset 1}${cpubar cpu0 4,18}${color}${voffset -28}${font}
+${font Ubuntu:size=8}${goto 32}CPU1: ${color1}${cpu cpu1}%${color}${goto 125}CPU9   : ${color1}${cpu cpu9}%${color}
+${goto 32}CPU2: ${color1}${cpu cpu2}%${color}${goto 125}CPU10: ${color1}${cpu cpu10}%${color}
+${goto 32}CPU3: ${color1}${cpu cpu3}%${color}${goto 125}CPU11: ${color1}${cpu cpu11}%${color}
+${goto 32}CPU4: ${color1}${cpu cpu4}%${color}${goto 125}CPU12: ${color1}${cpu cpu12}%${color}
+${goto 32}CPU5: ${color1}${cpu cpu5}%${color}${goto 125}CPU13: ${color1}${cpu cpu13}%${color}
+${goto 32}CPU6: ${color1}${cpu cpu6}%${color}${goto 125}CPU14: ${color1}${cpu cpu14}%${color}
+${goto 32}CPU7: ${color1}${cpu cpu7}%${color}${goto 125}CPU15: ${color1}${cpu cpu15}%${color}
+${goto 32}CPU8: ${color1}${cpu cpu8}%${color}${goto 125}CPU16: ${color1}${cpu cpu16}%${color}
+${goto 32}${font Ubuntu:style=Bold:size=10}Total: ${color1}${cpu cpu0}%${color}${font} ${alignr}${color1}${cpugraph cpu0 12,60 {color3} {color2}}${color}
+
+${goto 32}Temp: ${color1}${execi 10 sensors |grep "Tdie:" | cut -c16-22}${color}${font}
+${goto 32}Freq: ${color1}${freq_g 1} Ghz${color}${font}
 # |--MEM
 ${voffset 2}${offset 1}${color0}${font Poky:size=14}M${font}${color}${goto 32}${voffset -7}RAM: ${font Ubuntu:style=Bold:size=8}${color1}$memperc%${color}${font}
 ${voffset 1}${offset 1}${voffset 2}${color0}${membar 4,18}${color}${goto 32}${voffset -2}F: ${font Ubuntu:style=Bold:size=8}${color1}${memeasyfree}${color}${font}${voffset -2} U: ${font Ubuntu:style=Bold:size=8}${color1}${mem}${color}${font}
@@ -140,9 +141,7 @@ ${voffset -4}${font Ubuntu:style=Bold:size=8}${color2}PROCESSES ${stippled_hr}${
 ${font Ubuntu:style=Regular:size=8}${color1}${top name 1}$alignr${top cpu 1}% ${top mem 1}%${color}
 ${top name 2}$alignr${top cpu 2}% ${top mem 2}%
 ${top name 3}$alignr${top cpu 3}% ${top mem 3}%
-${top name 4}$alignr${top cpu 4}% ${top mem 4}%${font}
-
-
-
-
+${top name 4}$alignr${top cpu 4}% ${top mem 4}%
+${top name 5}$alignr${top cpu 5}% ${top mem 5}%
+${top name 6}$alignr${top cpu 6}% ${top mem 6}%${font}
 ]];
